kube/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: simple-daily-games
  labels:
    app: api
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      volumes:
        - name: postgres-secret-volume
          secret:
            secretName: postgres-secret
      containers:
        - name: api
          image: kingbrady/simple-daily-games-api
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: simple-daily-games
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: api
  type: ClusterIP
