kube/static.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static
  namespace: simple-daily-games
  labels:
    app: static
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: static
  template:
    metadata:
      labels:
        app: static
    spec:
      containers:
      - name: static
        image: kingbrady/simple-daily-games-static
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: static
  namespace: simple-daily-games
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: static
  type: ClusterIP
