kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 1
  labels:
    app.kubernetes.io/instance: simple-daily-games
    app.kubernetes.io/name: simple-daily-games
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: simple-daily-games
  namespace: simple-daily-games
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - countryle.kak.im
      secretName: countryle-tls
    - hosts:
        - capitale.kak.im
      secretName: capitale-tls
    - hosts:
        - grayscale.kak.im
      secretName: grayscale-tls
    - hosts:
        - invertedle.kak.im
      secretName: invertedle-tls
    - hosts:
        - geo-fun-factle.kak.im
      secretName: geo-fun-factle-tls
    - hosts:
        - home.games.kak.im
      secretName: landing-page-games-tls
  rules:
    - host: countryle.kak.im
      http:
        paths:
        - backend:
            service:
              name: static
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: capitale.kak.im
      http:
        paths:
        - backend:
            service:
              name: static
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: grayscale.kak.im
      http:
        paths:
        - backend:
            service:
              name: static
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: invertedle.kak.im
      http:
        paths:
        - backend:
            service:
              name: static
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: geo-fun-factle.kak.im
      http:
        paths:
        - backend:
            service:
              name: static
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: home.games.kak.im
      http:
        paths:
        - backend:
            service:
              name: static
              port:
                number: 80
          path: /
          pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: simple-daily-games
    app.kubernetes.io/name: simple-daily-games
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: simple-daily-games-api-ratelimit@kubernetescrd
  name: api
  namespace: simple-daily-games
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.games.kak.im
      secretName: api-games-tls
  rules:
    - host: api.games.kak.im
      http:
        paths:
        - backend:
            service:
              name: api
              port:
                number: 80
          path: /
          pathType: Prefix
